Added new packages to demos

--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -92,7 +92,8 @@
         "@esri/solution-group": "node_modules/@esri/solution-group/dist/umd/group.umd",
         "@esri/solution-simple-types": "node_modules/@esri/solution-simple-types/dist/umd/simple-types.umd",
         "@esri/solution-hub-types": "node_modules/@esri/solution-hub-types/dist/umd/hub-types.umd",
-        "@esri/solution-storymap": "node_modules/@esri/solution-storymap/dist/umd/storymap.umd"
+        "@esri/solution-storymap": "node_modules/@esri/solution-storymap/dist/umd/storymap.umd",
+        "@esri/solution-web-experience": "node_modules/@esri/solution-web-experience/dist/umd/web-experience.umd"
       }
     });
 
