convert Site and Page to template

--- a/demos/createSolution/index.html
+++ b/demos/createSolution/index.html
@@ -43,15 +43,17 @@
           <input class="form-control" type="text" id="itemOrGroupId">
           <label for="id">Or pick from the list below:</label> 
           <select name="Solution Item" id="id" class="form-control">
+            <option value="49de38329ee14b39b7ec2f122c5ee819">Site - Winter Fun  ( 49de38329ee14b39b7ec2f122c5ee819) </option>
+            <option value="cc1f49eb821441a88c0c337112c221b6">Site - CloneWars  ( cc1f49eb821441a88c0c337112c221b6) </option>
             <option value="b6413231e0a543b2953df70f68a4b578">StoryMap  ( b6413231e0a543b2953df70f68a4b578) </option>
             <option value="5cef7eab57874d26bca907ac611e4520">ExB  ( 5cef7eab57874d26bca907ac611e4520) </option>
           </select>
           <br />
           <i>Credentials in destination organization:</i><br />
-          <label for="username">username:&nbsp;</label><input type="text" class="form-control" id="username" value="">
-          <label for="password">password:&nbsp;</label><input type="password" class="form-control" id="password" value="">
+          <label for="username">username:&nbsp;</label><input type="text" class="form-control" id="username" value="dbouwman_dc">
+          <label for="password">password:&nbsp;</label><input type="password" class="form-control" id="password" value="cmrs2020">
           <label for="password">Portal:</label>
-          <input type="text" id="portal" class="form-control" value="https://www.arcgis.com/sharing/rest">
+          <input type="text" id="portal" class="form-control" value="https://qaext.arcgis.com/sharing/rest">
           <br>
           <button class="btn btn-default" onclick="goFcn()">Create Solution</button>
         </div>
