whoopsie... again...gah

--- a/demos/createSolution/index.html
+++ b/demos/createSolution/index.html
@@ -50,10 +50,10 @@
           </select>
           <br />
           <i>Credentials in destination organization:</i><br />
-          <label for="username">username:&nbsp;</label><input type="text" class="form-control" id="username" value="dbouwman_dc">
-          <label for="password">password:&nbsp;</label><input type="password" class="form-control" id="password" value="cmrs2020">
+          <label for="username">username:&nbsp;</label><input type="text" class="form-control" id="username" value="">
+          <label for="password">password:&nbsp;</label><input type="password" class="form-control" id="password" value="">
           <label for="password">Portal:</label>
-          <input type="text" id="portal" class="form-control" value="https://qaext.arcgis.com/sharing/rest">
+          <input type="text" id="portal" class="form-control" value="https://www.arcgis.com/sharing/rest">
           <br>
           <button class="btn btn-default" onclick="goFcn()">Create Solution</button>
         </div>
