--- a/demos/createSolution/index.html
+++ b/demos/createSolution/index.html
@@ -37,7 +37,7 @@
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
         <h1>Convert to Solution</h1>
-        <p>Create a solution item from the content of a group, or from a single item and it's dependencies.</p>
+        <p>Create a solution item from the content of a group, or from a single item and its dependencies.</p>
         <div id="input" class="form-group" style="display:none">
           <label for="itemOrGroupId">Enter an Item or Group ID:</label>
           <input class="form-control" type="text" id="itemOrGroupId">
