Moved JSZip to demos that use it

--- a/demos/copySolutions/index.html
+++ b/demos/copySolutions/index.html
@@ -62,6 +62,7 @@
     var package_path = window.location.href.substring(0, window.location.href.lastIndexOf('/'));
     var dojoConfig = {
       "paths": {
+        "jszip": package_path + "/node_modules/jszip/dist/jszip",
         "tslib": package_path + "/node_modules/tslib/tslib",
 
         // load the local versions
