Added polyfills to demos

--- a/demos/createFolder/index.html
+++ b/demos/createFolder/index.html
@@ -38,6 +38,7 @@
     <br />
   <div id="output" style="display:none"></div>
 
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
   <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script>
     var goFcn;
