--- a/demos/createSolution/index.html
+++ b/demos/createSolution/index.html
@@ -41,7 +41,7 @@
         <div id="input" class="form-group" style="display:none">
           <label for="itemOrGroupId">Enter an Item or Group ID:</label>
           <input class="form-control" type="text" id="itemOrGroupId">
-          <label for="id">Or pick from the list below:</label> 
+          <label for="id">Or pick from the list below:</label>
           <select name="Solution Item" id="id" class="form-control">
           </select>
           <br />
@@ -60,6 +60,7 @@
     </div>
   </div>
 
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
   <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script>
     var goFcn;
