--- a/demos/compareJSON/index.html
+++ b/demos/compareJSON/index.html
@@ -55,6 +55,7 @@
   </div>
   <div id="output" style="display:none">Comparing...</div>
 
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
   <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script>
     var loadFcn, goFcn;
