--- a/demos/copyItemInfo/index.html
+++ b/demos/copyItemInfo/index.html
@@ -63,6 +63,7 @@
   </div>
   <div id="output" style="display:none">Fetching...</div>
 
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
   <script>
     var goFcn;
 
