--- a/demos/copySolutions/index.html
+++ b/demos/copySolutions/index.html
@@ -148,6 +148,7 @@
 
   </div>
 
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
   <script>
     var connectToSourceFcn, connectToDestinationFcn;
 
