--- a/demos/polyfillExplorer/index.html
+++ b/demos/polyfillExplorer/index.html
@@ -24,6 +24,7 @@
 <body>
   <div id="output">Running...</div>
 
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
   <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script>
     require.config({
