--- a/demos/sanitizeGroupItems/index.html
+++ b/demos/sanitizeGroupItems/index.html
@@ -44,6 +44,7 @@
   </div>
   <div id="output" style="display:none">Screening...</div>
 
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
   <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script>
     var goFcn;
