--- a/demos/sanitizer/index.html
+++ b/demos/sanitizer/index.html
@@ -38,6 +38,7 @@
     <textarea rows=10 id="sanitized" style="width:90%"></textarea>
   </div>
 
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=fetch%2Ces2015"></script>
   <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script>
     var goFcn;
