--- a/demos/getItemInfo/index.html
+++ b/demos/getItemInfo/index.html
@@ -68,7 +68,9 @@
         "@esri/hub-common": "node_modules/@esri/hub-common/dist/umd/common.umd",
         "@esri/hub-sites": "node_modules/@esri/hub-sites/dist/umd/sites.umd",
         "@esri/hub-initiatives": "node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd",
-        "@esri/solution-common": "node_modules/@esri/solution-common/dist/umd/common.umd"
+        "@esri/hub-sites": "node_modules/@esri/hub-sites/dist/umd/sites.umd",
+        "@esri/hub-teams": "node_modules/@esri/hub-teams/dist/umd/teams.umd",
+        "@esri/hub-types": "node_modules/@esri/hub-types/dist/umd/types.umd"
       }
     });
 
