--- a/demos/copyItemInfo/index.html
+++ b/demos/copyItemInfo/index.html
@@ -42,8 +42,10 @@
         "@esri/arcgis-rest-request": package_path + "/node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.min",
         "@esri/arcgis-rest-service-admin": package_path + "/node_modules/@esri/arcgis-rest-service-admin/dist/umd/service-admin.umd.min",
         "@esri/hub-common": package_path + "/node_modules/@esri/hub-common/dist/umd/common.umd",
-        "@esri/hub-sites": package_path + "/node_modules/@esri/hub-sites/dist/umd/sites.umd",
-        "@esri/hub-initiatives": package_path + "/node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd",
+        "@esri/hub-initiatives": "node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd",
+        "@esri/hub-sites": "node_modules/@esri/hub-sites/dist/umd/sites.umd",
+        "@esri/hub-teams": "node_modules/@esri/hub-teams/dist/umd/teams.umd",
+        "@esri/hub-types": "node_modules/@esri/hub-types/dist/umd/types.umd",
 
         // load the unminified so we can debug things
         "@esri/solution-common": package_path + "/node_modules/@esri/solution-common/dist/umd/common.umd",
