--- a/demos/compareJSON/index.html
+++ b/demos/compareJSON/index.html
@@ -63,19 +63,16 @@
       paths: {
         "tslib": "node_modules/tslib/tslib",
 
-        // load the local versions
         "@esri/arcgis-rest-auth": "node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-feature-layer": "node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
         "@esri/arcgis-rest-portal": "node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.min",
         "@esri/arcgis-rest-service-admin": "node_modules/@esri/arcgis-rest-service-admin/dist/umd/service-admin.umd.min",
-        "@esri/hub-common": "node_modules/@esri/hub-common/dist/umd/common.umd",
-        "@esri/hub-initiatives": "node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd",
-        "@esri/hub-sites": "node_modules/@esri/hub-sites/dist/umd/sites.umd",
-        "@esri/hub-teams": "node_modules/@esri/hub-teams/dist/umd/teams.umd",
-        "@esri/hub-types": "node_modules/@esri/hub-types/dist/umd/types.umd",
-
-        // load the unminified so we can debug things
+        "@esri/hub-common": "node_modules/@esri/hub-common/dist/umd/common.umd.min",
+        "@esri/hub-initiatives": "node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd.min",
+        "@esri/hub-sites": "node_modules/@esri/hub-sites/dist/umd/sites.umd.min",
+        "@esri/hub-teams": "node_modules/@esri/hub-teams/dist/umd/teams.umd.min",
+        "@esri/hub-types": "node_modules/@esri/hub-types/dist/umd/types.umd.min",
         "@esri/solution-common": "node_modules/@esri/solution-common/dist/umd/common.umd"
       }
     });
