--- a/demos/createSolution/index.html
+++ b/demos/createSolution/index.html
@@ -66,8 +66,6 @@
     var goFcn;
     require.config({
       paths: {
-        "tslib": "../node_modules/tslib/tslib",
-
         "@esri/arcgis-rest-auth": "../node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-feature-layer": "../node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
         "@esri/arcgis-rest-portal": "../node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
@@ -86,7 +84,9 @@
         "@esri/solution-hub-types": "../node_modules/@esri/solution-hub-types/dist/umd/hub-types.umd",
         "@esri/solution-storymap": "../node_modules/@esri/solution-storymap/dist/umd/storymap.umd",
         "@esri/solution-form": "../node_modules/@esri/solution-form/dist/umd/form.umd",
-        "@esri/solution-web-experience": "../node_modules/@esri/solution-web-experience/dist/umd/web-experience.umd"
+        "@esri/solution-web-experience": "../node_modules/@esri/solution-web-experience/dist/umd/web-experience.umd",
+        "adlib": "../node_modules/adlib/dist/adlib",
+        "tslib": "../node_modules/tslib/tslib"
       }
     });
 
