--- a/demos/polyfillExplorer/index.html
+++ b/demos/polyfillExplorer/index.html
@@ -34,9 +34,6 @@
   <script>
     require.config({
       paths: {
-        "tslib": "../node_modules/tslib/tslib",
-
-        // load the local versions
         "@esri/arcgis-rest-auth": "../node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-feature-layer": "../node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
         "@esri/arcgis-rest-portal": "../node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
@@ -46,7 +43,9 @@
         "@esri/hub-initiatives": "../node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd",
         "@esri/hub-sites": "../node_modules/@esri/hub-sites/dist/umd/sites.umd",
         "@esri/hub-teams": "../node_modules/@esri/hub-teams/dist/umd/teams.umd",
-        "@esri/solution-common": "../node_modules/@esri/solution-common/dist/umd/common.umd"
+        "@esri/solution-common": "../node_modules/@esri/solution-common/dist/umd/common.umd",
+        "adlib": "../node_modules/adlib/dist/adlib",
+        "tslib": "../node_modules/tslib/tslib"
       }
     });
 
