--- a/demos/createFolder/index.html
+++ b/demos/createFolder/index.html
@@ -47,8 +47,6 @@
     var goFcn;
     require.config({
       paths: {
-        "tslib": "../node_modules/tslib/tslib",
-
         "@esri/arcgis-rest-auth": "../node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-feature-layer": "../node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
         "@esri/arcgis-rest-portal": "../node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
@@ -58,7 +56,9 @@
         "@esri/hub-initiatives": "../node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd.min",
         "@esri/hub-sites": "../node_modules/@esri/hub-sites/dist/umd/sites.umd.min",
         "@esri/hub-teams": "../node_modules/@esri/hub-teams/dist/umd/teams.umd.min",
-        "@esri/solution-common": "../node_modules/@esri/solution-common/dist/umd/common.umd"
+        "@esri/solution-common": "../node_modules/@esri/solution-common/dist/umd/common.umd",
+        "adlib": "../node_modules/adlib/dist/adlib",
+        "tslib": "../node_modules/tslib/tslib"
       }
     });
 
