--- a/demos/sanitizeGroupItems/index.html
+++ b/demos/sanitizeGroupItems/index.html
@@ -53,9 +53,6 @@
     var goFcn;
     require.config({
       paths: {
-        "tslib": "../node_modules/tslib/tslib",
-
-        // load the local versions
         "@esri/arcgis-rest-auth": "../node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
         "@esri/arcgis-rest-feature-layer": "../node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
         "@esri/arcgis-rest-portal": "../node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
@@ -71,7 +68,9 @@
         "@esri/solution-group": "../node_modules/@esri/solution-group/dist/umd/group.umd",
         "@esri/solution-simple-types": "../node_modules/@esri/solution-simple-types/dist/umd/simple-types.umd",
         "@esri/solution-hub-types": "../node_modules/@esri/solution-hub-types/dist/umd/hub-types.umd",
-        "@esri/solution-storymap": "../node_modules/@esri/solution-storymap/dist/umd/storymap.umd"
+        "@esri/solution-storymap": "../node_modules/@esri/solution-storymap/dist/umd/storymap.umd",
+        "adlib": "../node_modules/adlib/dist/adlib",
+        "tslib": "../node_modules/tslib/tslib"
       }
     });
 
